# quinn

./: .gitignore
ch4/: .fortls  CMakeLists.txt  midpoint.F90  midpoint.f90  simpson.F90  simpson.f90
